# pytosmartc

./: .gitignore  README.md  crowdfund.py  crowdfund.smart.c  lottery.py  lottery.smart.c  multisig.py  multisig.smart.c  mytoken.py  mytoken.smart.c  pyproject.toml  signum_compiler.py  test_smart_contracts.py  vault.py  vault.smart.c
.github/workflows/: ci.yml
